Fixed layout issue

--- a/css/course.css
+++ b/css/course.css
@@ -7,11 +7,6 @@
 
 /* General section style*/
 
-#course-info {
-    height: 30rem;
-}
-
-
 /* Course description style */
 
 .panel-main {
